--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^9.12.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
