--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "javascript.format.insertSpaceAfterOpeningAndBeforeClosingTemplateStringBraces": true,
-    "prettier.embeddedLanguageFormatting": "auto",
-    "eslint.format.enable": true
+    "prettier.embeddedLanguageFormatting": "off",
+    "eslint.format.enable": true,
+    "typescript.format.insertSpaceAfterTypeAssertion": true
 }
