--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.12.1",
+    "leaflet": "^1.9.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.0.8",
+    "swiper": "^6.8.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
